<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/device_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/device_bg">

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity="center">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentLeft="true"
                android:src="@mipmap/logo_back"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_add"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:visibility="invisible">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/selector_add_img"
                />


        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/ll_add"
            android:layout_toRightOf="@+id/ll_back"
            android:gravity="center"
            android:text="@string/res_title"
            android:textColor="@color/device_text"
            android:textSize="17sp"/>

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/normal_line"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp">

            <!-- 视频 -->
            <LinearLayout
                android:id="@+id/ll_video_list"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_item_press"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/resource_sort_height"
                    android:layout_height="@dimen/resource_sort_height"
                    android:src="@mipmap/video_list"/>

                <TextView
                    style="@style/Resource_Sort_Text"
                    android:text="@string/video"
                    />

            </LinearLayout>

            <!-- 图片 -->
            <LinearLayout
                android:id="@+id/ll_image_list"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_item_press"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/resource_sort_height"
                    android:layout_height="@dimen/resource_sort_height"
                    android:src="@mipmap/image_list"/>

                <TextView
                    style="@style/Resource_Sort_Text"
                    android:text="@string/image"
                    />

            </LinearLayout>


            <!-- 播放列表 -->
            <LinearLayout
                android:id="@+id/ll_upload"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_item_press"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/resource_sort_height"
                    android:layout_height="@dimen/resource_sort_height"
                    android:src="@mipmap/do_upload"/>

                <TextView
                    style="@style/Resource_Sort_Text"
                    android:text="@string/do_upload"
                    />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/normal_line"
            />

    </LinearLayout>


    <com.ads.clientconnection.view.PlayListView
        android:id="@+id/plv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        />

</LinearLayout>