<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/device_bg"
    >

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/device_bg">

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity="center">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentLeft="true"
                android:src="@mipmap/logo_back"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_add"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:gravity="center">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/selector_add_img"
                />


        </LinearLayout>


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/ll_add"
            android:layout_toRightOf="@+id/ll_back"
            android:gravity="center"
            android:text="@string/res_title"
            android:textColor="@color/device_text"
            android:textSize="17sp"/>

    </RelativeLayout>


    <Button
        android:id="@+id/btn_control_commit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/selector_button_press"
        android:text="@string/button_commit"
        android:textColor="@color/white"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_control_commit"
        android:layout_below="@+id/rl_title"/>


    <RelativeLayout
        android:id="@+id/rl_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_title"
        android:layout_marginBottom="64dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@mipmap/res_is_empty"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxWidth="250dp"
                android:paddingTop="16dp"
                android:text="@string/res_is_empty"
                android:textColor="@color/blue_main"
                android:textSize="17sp"/>
        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>