<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_main"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@drawable/selector_item_press"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_device_type"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:src="@mipmap/device_android_logo"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <!-- ip地址 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/device_ip"
                        android:textColor="@color/device_text"
                        android:textSize="17sp"/>

                    <TextView
                        android:id="@+id/tv_ip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/device_text_content"
                        android:textSize="17sp"
                        tools:text="192.168.1.103"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:text="@string/device_port_symbol"
                        android:textColor="@color/device_text_content"
                        android:textSize="17sp"/>

                    <TextView
                        android:id="@+id/tv_port"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/device_text_content"
                        android:textSize="17sp"
                        tools:text="60001"/>

                </LinearLayout>

                <!-- 设备名称 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/device_name"
                        android:textColor="@color/device_text"
                        android:textSize="17sp"/>

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/device_text_content"
                        android:textSize="17sp"
                        tools:text="OPPO A13"/>

                </LinearLayout>

                <!-- 操作系统 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/device_os"
                        android:textColor="@color/device_text"
                        android:textSize="17sp"/>

                    <TextView
                        android:id="@+id/tv_os"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/device_text_content"
                        android:textSize="17sp"
                        tools:text="Windows"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/normal_line"/>

    </LinearLayout>


</LinearLayout>
