<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <!-- 图像 -->
            <ImageView
                android:id="@+id/iv_title"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:src="@mipmap/logo_video"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="16dp"
                android:paddingBottom="20dp">

                <!-- 名字 -->
                <LinearLayout
                    android:id="@+id/ll_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/res_name"
                        android:textColor="@color/device_text"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:text=""
                        android:textColor="@color/device_text_content"
                        android:textSize="20sp"
                        tools:text="Img"/>


                </LinearLayout>

                <!-- 大小等 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/res_size"
                        android:textColor="@color/device_text_content"
                        android:textSize="17sp"/>

                    <TextView
                        android:id="@+id/tv_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:textColor="@color/device_text_content"
                        android:textSize="17sp"
                        tools:text="1m"/>


                    <TextView
                        android:id="@+id/tv_time_remind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="32dp"
                        android:text="@string/res_time"
                        android:textColor="@color/device_text_content"
                        android:textSize="17sp"/>


                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:textColor="@color/device_text_content"
                        android:textSize="17sp"
                        tools:text="1分16秒"/>
                </LinearLayout>

                <!-- 停留时长 -->

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/res_stay"
                        android:textColor="@color/device_text_content"
                        android:textSize="17sp"/>

                    <TextView
                        android:id="@+id/tv_stay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:textColor="@color/device_text_content"
                        android:textSize="17sp"
                        tools:text="10秒"/>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/normal_line"
            />
    </LinearLayout>


</LinearLayout>
